GET请求与POST请求

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# ServerProperties
 spring.application.name=codeproject
+server.port=1103
+server.servlet.context-path=/codeproject
+
+# ThymeleafProperties
+spring.thymeleaf.cache=false
